# hive-protocol

./: .env.example  .gitignore  README.md  docker-compose.yml
agents/: base_agent.py  contrarian_agent.py  llm_agent.py  momentum_agent.py  random_agent.py  sentiment_agent.py
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployMainnet.s.sol  UpgradeVault.s.sol
contracts/src/: HiveAccess.sol  HiveAgent.sol  HiveReputationBridge.sol  HiveRiskControl.sol  HiveRound.sol  HiveScore.sol  HiveVault.sol
contracts/src/interfaces/: IHiveAccess.sol  IHiveAgent.sol  IHiveRound.sol  IHiveScore.sol  IHiveTypes.sol  IHiveVault.sol
contracts/src/libraries/: HiveMath.sol
contracts/test/: BaseTest.sol
contracts/test/integration/: FullRound.t.sol
contracts/test/invariant/: VaultInvariant.t.sol
contracts/test/unit/: HiveAccess.t.sol  HiveReputationBridge.t.sol  HiveRiskControl.t.sol  HiveScore.t.sol  HiveVault.t.sol
docs/: agent-integration-guide.md  treasury-security.md  运营报告-20260403.md
engine/: Cargo.toml  Dockerfile  config.toml  config.toml.example
engine/src/: config.rs  main.rs
engine/src/api/: mod.rs  ws.rs
engine/src/chain/: mod.rs
engine/src/execution/: dry_run.rs  mod.rs  polymarket.rs
engine/src/market/: mod.rs  price_feed.rs
engine/src/risk/: mod.rs
engine/src/scheduler/: round_manager.rs
engine/src/settlement/: mod.rs
infra/: prometheus.yml
scripts/: auto-runner.sh  debug-orderbook.mjs  distribute-bsc.mjs  e2e-dry-run.mjs  onboard-agent.sh  package-lock.json  package.json  polymarket-trade.mjs  redeem-wins.mjs  register-agents.mjs  register-agents.sh  round-status.mjs  run-one-round.sh  run-polymarket-round.sh  tg-notify.sh  verify-mainnet.mjs  verify-polymarket.mjs
sdk/python/: pyproject.toml
sdk/python/examples/: llm_agent.py  simple_agent.py
sdk/python/hive_protocol/: __init__.py  agent.py  contract.py  crypto.py  types.py  ws_client.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: simple-agent.ts
sdk/typescript/src/: agent.ts  crypto.ts  index.ts  types.ts
(+2 files in other folders)
