[package]
name = "hive-engine"
version = "0.1.0"
edition = "2021"
description = "Hive Protocol off-chain execution engine"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Blockchain interaction
alloy = { version = "0.9", features = ["full"] }
async-trait = "0.1"

# Polymarket
polymarket-client-sdk = { version = "0.4", features = ["clob", "gamma"] }
rust_decimal = "1"
rust_decimal_macros = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for exchange APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket (for market data)
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal"] }

# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"
config = "0.14"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Time parsing
humantime = "2"

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
