[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-protocol"
version = "0.1.0"
description = "Python SDK for Hive Protocol — AI Agent Swarm Prediction Fund"
requires-python = ">=3.9"
dependencies = [
    "web3>=6.0",
    "websockets>=12.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["hive_protocol*"]
